welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:25: error: type mismatch;
 found   : Unit
 required: Boolean
    right()
         ^SnakeBuggle:20: error: type mismatch;
 found   : Unit
 required: Boolean
  if ((estFaceMur())&&(getDirection()==Direction.EST)){
  ^